# minerva

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  biome.json  bunfig.toml  knip.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/gui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/gui/scripts/: prepare-sidecar.ts
apps/gui/src/: app.tsx  index.css  main.tsx
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/gui/src/components/: ConfigDialog.tsx  HeaderBar.tsx  PermissionDialog.tsx  ProjectTabs.tsx  SessionBrowser.tsx
apps/gui/src/components/chat/: DiffView.tsx  Markdown.tsx  PlanItem.tsx  ThoughtItem.tsx  ToolItem.tsx  Transcript.tsx  UsageFooter.tsx
apps/gui/src/hooks/: use-session-store.ts
apps/gui/src/lib/: config-form.ts  diff-rows.ts  kernel-connection.ts  kernel-manager.ts  native.ts  notify.ts  permission-queue.ts  session-slots.ts  session-switches.ts  sidecar-bridge.ts  sidecar-generation.ts  tab-session.ts  tabs.ts  tauri-transport.ts
apps/gui/test/: config-form.test.ts  diff-rows.test.ts  kernel-manager.test.ts  notify.test.ts  permission-queue.test.ts  session-slots.test.ts  session-switches.test.ts  sidecar-generation.test.ts  stale-session.test.ts  tab-session.test.ts  tabs.test.ts  tauri-transport.test.ts
docs/: ARCHITECTURE.md  DESIGN.md  PROTOCOL.md
docs/adr/: 0001-record-architecture-decisions.md  0002-gui-kernel-lifecycle.md  0003-harbor-swebench-eval.md
evals/harbor/: Dockerfile.minerva  README.md  pyproject.toml
evals/harbor/minerva_harbor/: __init__.py  agent.py  session_log.py  settings.json  trajectory.py
scripts/: acp-smoke.ts  build-release.ts  copy-rg.ts  e2e-tui.exp  live-smoke.ts  smoke-tui.exp
