[project]
name = "minerva-harbor"
version = "0.0.0"
description = "Harbor installed-agent adapter that evaluates Minerva end-to-end (e.g. on SWE-bench) with a fixed control model."
requires-python = ">=3.11"
# Harbor is the eval harness (Terminal-Bench team). Pin a known-good version
# when a run stabilizes; see README for the nightly channel.
dependencies = [
  "harbor>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minerva_harbor"]
