[package]
name = "minerva-gui"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "minerva_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
